Fix small alignment on (?) RSS

--- a/src/frontend/static/css/podprofile/podprofile.css
+++ b/src/frontend/static/css/podprofile/podprofile.css
@@ -1012,3 +1012,6 @@ body.dark-mode .error-container {
   margin-right: var(--spacing-md);
 }
 
+#rss-help-button {
+  margin-bottom: calc(var(--spacing-xs) * -1);
+}
